--- a/index.html
+++ b/index.html
@@ -1,48 +1,12 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nanwokan Ouattara - Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/common.css">
-</head>
-<body>
-  <header>
-    <div><a href="index.html">Nanwokan Ouattara</a></div>
-    <nav>
-      <a href="about.html">À propos</a>
-      <a href="webfin.html">Web / Finance</a>
-      <a href="portfolio.html">Portfolio</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
-  <main class="hero">
-    <div class="stars"></div>
-    <div class="hero-text">
-      <h1>Bonjour, je suis Nanwokan</h1>
-      <h2>Développeuse Mobile Android en devenir & Contrôleuse de Gestion en action</h2>
-      <p>
-        De la saisie comptable à l’élaboration de reporting, en passant par le développement d’interfaces web interactives, je construis des solutions qui allient performance et modernité.
-      </p>
-      <div class="hero-buttons">
-        <a href="contact.html">Me Contacter</a>
-        <a href="portfolio.html">Voir Mon Travail</a>
-      </div>
-      <div class="socials">
-        <a href="https://www.instagram.com/nanwokan"><i class="fa-brands fa-instagram"></i></a>
-        <a href="https://github.com/Nanwokan"><i class="fa-brands fa-github"></i></a>
-        <a href="https://www.linkedin.com/in/nanwokan-claire-lydie-ouattara-419969268"><i class="fa-brands fa-linkedin"></i></a>
-      </div>
-    </div>
-    <div class="hero-image">
-      <img src="img/portrait.jpg" alt="Portrait de Nanwokan Ouattara" />
-    </div>
-  </main>
-  <footer>
-    &copy; 2025 Nanwokan Ouattara. Tous droits réservés.
-  </footer>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio NCLO</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
